force-app/main/default/objects/analyticsengine__Setting__c/fields/analyticsengine__Is_Preview__c.field-meta.xml
<CustomField>
    <fullName>analyticsengine__Is_Preview__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to track report schedules for one time test sends</description>
    <label>Is Preview</label>
    <type>Checkbox</type>
</CustomField>